# polaris-claims-lakehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
data/: README.md
dbt/: .gitignore  dbt_project.yml  packages.yml
dbt/profiles/: profiles.yml
docs/: architecture.md
docs/adr/: 0000-template.md  0001-kafka-over-event-hubs.md  0002-delta-over-iceberg.md  0003-snowflake-as-serving.md  0004-scd2-via-merge.md  0005-late-arriving-fnol.md  0006-partition-by-event-date-state.md  0007-streaming-outside-airflow.md  0008-secrets-keyvault-oidc.md  README.md
infra/docker/: docker-compose.yml
scripts/: generate_polaris_data.py  hello_kafka.py
