[project]
name = "polaris"
version = "0.1.0"
description = "Polaris — P&C insurance claims lakehouse (workspace root)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "ruff>=0.5",
    "sqlfluff>=3.0",
    "sqlfluff-templater-dbt>=3.0",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "detect-secrets>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dbt/target", "dbt/dbt_packages", "**/checkpoints"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]  # too-many-arguments — common in Spark transforms

[tool.sqlfluff.core]
dialect = "snowflake"
templater = "dbt"
exclude_rules = ["LT05"]
max_line_length = 120

[tool.pytest.ini_options]
testpaths = ["ingestion/tests", "streaming", "databricks/libraries"]
python_files = ["test_*.py"]
addopts = "--strict-markers -ra"
